repository/package/skin/src/main/webapp/screen.css
/* ... */
.rename-16{background-image:url("images/icons/rename-16.png");}

.document-lock-16{background-image:url("images/icons/document-lock-16.png")}

.dialog-information-48{background-image:url("images/icons/dialog-information-48.png")}
.hippo-icon-question-48{background-image:url("images/icons/dialog-question-48.png")}

.panel-toggle-version-16{background-image:url("images/icons/panel-toggle-version-16.png");}
.panel-toggle-version-16 a:hover{cursor: pointer}

.edit-16{background-image:url("images/icons/edit-16.png")}
.delete-16{background-image:url("images/icons/edit-delete-16.png")}
.add-16{background-image:url("images/icons/list-add-16.png")}
.remove-16{background-image:url("images/icons/edit-delete-16.png")}

.delete-inline-16{background-image:url("images/icons/delete-inline-16.png")}
.delete-inline-24{background-image:url("images/icons/delete-inline-24.png")}
.delete-inline-48{background-image:url("images/icons/delete-inline-48.png")}
.delete-inline-128{background-image:url("images/icons/delete-inline-128.png")}

.up-16{background-image:url("images/icons/go-up-16.png")}
.down-16{background-image:url("images/icons/go-down-16.png")}

/* temp quick hack */
.revert_ico{background-image:url("images/icons/document-revert-16.png")} 
.save_ico{background-image:url("images/icons/document-save-16.png")}

.templateitemup_ico{background-image:url("images/icons/go-up.png")}
.templateitemdown_ico{background-image:url("images/icons/go-down.png")}

.reqdelete_ico{background-image:url("images/icons/workflow-requestdelete-16.png")}
.reqpublish_ico{background-image:url("images/icons/workflow-requestpublish-16.png")}
.reqdepublish_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}
.reqschedpublish_ico{background-image:url("images/icons/workflow-requestpublish-16.png")}
.reqscheddepublish_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}
.publish-16, .publish_ico{background-image:url("images/icons/publish-16.png")}
.depublish-16, .depublish_ico{background-image:url("images/icons/unplublish-16.png")}
.publish-schedule-16{background-image:url("images/icons/publish-schedule-16.png")}

.copy-16{background-image:url("images/icons/copy-16.png")}
.move-16{background-image:url("images/icons/move-16.png")}

.depublish-schedule-16{background-image:url("images/icons/unpublish-scheduled-16.png")}

.reqcancel_ico{background-image:url("images/icons/unplublish-16.png")}
.reqaccept_ico{background-image:url("images/icons/workflow-accept-16.png")}
.reqreject_ico{background-image:url("images/icons/workflow-requestunpublish-16.png")}

.adddocument_ico{background-image:url("images/icons/document-new-16.png")}
.addfolder_ico{background-image:url("images/icons/folder-new-16.png")}
.addextended_ico{background-image:url("images/icons/folder-extended-new-16.png")}

.copymodelrequest_ico{background-image:url("images/icons/document-copy-16.png")}
.editmodel_ico{background-image:url("images/icons/edit-16.png")}
.createnamespace_ico{background-image:url("images/icons/document-new-16.png")}
.modelreq_ico{background-image:url("images/icons/refresh-16.png")}
.createtyperequest_ico{background-image:url("images/icons/document-new-16.png")}

#context-menu-container {
  text-align: left;
  position: absolute;
  display: block;
  z-index: 10000;
  color: #000;
  padding:3px;
  left: -1000px;
  top: -1000px;
}

#global-feedback-container {
  border: 1px solid #e3e3e3;
  background-color: #FFF6E0;
  color: #333333;
  padding-top: 2px;
}

li.feedbackPanelERROR {
  margin: 5px;
  display: inline;
}

table.hippo-defaultcontent td {
  vertical-align: top;
}

.smooth_load_workaround {
  display: none;
  left: -2000px;
  top: -2000px;
  position: absolute;
}

